--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v5.0.0
       - uses: leafo/gh-actions-lua@v12.0.0
       - run: cargo install selene stylua
-      - run: selene . --pattern '**/*.lua'
+      - run: selene lua generate.lua palette.lua
       - run: stylua --check .
       - run: |
           lua generate.lua
